$Id$

TODO:
- classpath, jamvm
- give W900V a AVM-Webinterface (from 7150)
- orangebox (?)
- bird and netsnmp don't build with more than one job
- deco

revision 89:
- fix 7170 Labor patches
revision 84
- fix precompiled toolchain download URL in toolchain/make/download-toolchain.mk
- add forgotten cpmaccfg in make/Config.in
- remove precompiled libs from root/lib
revision 83
- Moving all files back to SVN project's trunk, because we have given up plans
  to merge the repository with Danisahne's Sourceforge repository one day
  (licencing issues concerning AVM copyrighted file patches). So we thought we
  could as well have our own trunk again.
revisions 73-82
- SVN repository restructuring experiments gone bad
revision 72:
- added download location for toolchain (thanks @ DPR)
- updated orangebox to 1.05
revision 70:
- fixed download toolchain
- disable tr069 if selected openssl
- updated orangebox to 1.02
revision 69:
- fix dropbear-sshd-only package
revision 68:
- try different binutil download locations (stable, developer) for target toolchain
revision 67:
- fixed rebuilding of a kernel with different modules
revision 66:
- small fixes in download-toolchain.mk, kernel/Config.in and make/deco/Config.in
revision 65:
- worked on precompiled toolchain
- fixed netsnmp-package
- added busybox patch
- updated 7050 to 04.31
- updated 7170_phone_labor to 6572
- added deco and tinyproxy
revision 63:
- prepare for downloadable toolchain (i386)
revision 62:
- added more packages to ./packages
revision 60:
- updated netsnmp-package to 0.2
- added tinyproxy-1.7.0 package
- added deco-39 package
revision 59:
- new patch fixes mc-4.5.0 build error on GNOME systems
revision 58:
- change in lzma.mk (dos2unix no more needed, thanks aholler)
revision 57:
- remove getcons (not working for me)
- fixed typo in menuconfig (uClibc-version)
- fixed busybox patch (440-httpd_chdir.patch)
- added fon_7150
revision 56:
- fixed openvpn-lzo_conf
revision 55: