@@ -7,6 +7,12 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
+revision 91:
+- fix error with download and external toolchain:
+	uClibc-libs are not in /root/lib
+- updated download toolchain to 0.2
+revision 90:
+- add/remove patches for (non-working) uClibc-0.9.28.3/1
 revision 89:
 - fix 7170 Labor patches
 revision 84
